test/classes/initializers/phase1/use-before-method.good
use-before-method.chpl:13: In initializer:
use-before-method.chpl:14: error: Field used before it is initialized
